// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconTextGrouping it should render properly with all required props 1`] = `
<div
  className="IconTextGrouping slate"
>
  <React.Fragment>
    <h5
      className="title"
    >
      test title
    </h5>
    <FontAwesomeIcon
      border={false}
      className="icon"
      fixedWidth={false}
      flip={null}
      icon="test-icon"
      listItem={false}
      mask={null}
      name=""
      pull={null}
      pulse={false}
      rotation={null}
      size="6x"
      spin={false}
      symbol={false}
      transform={null}
    />
    
  </React.Fragment>
</div>
`;

exports[`IconTextGrouping it should render properly with some props assigned 1`] = `
<withRouter(OutboundLink)
  analyticsEventLabel="textTitle <IconTextGrouping>"
  className="IconTextGrouping iconClass slate link"
  hasIcon={false}
  href="www.testwebsite.com"
>
  <React.Fragment>
    <h5
      className="title"
    >
      textTitle
    </h5>
    <FontAwesomeIcon
      border={false}
      className="icon"
      fixedWidth={false}
      flip={null}
      icon="test"
      listItem={false}
      mask={null}
      name=""
      pull={null}
      pulse={false}
      rotation={null}
      size="5x"
      spin={false}
      symbol={false}
      transform={null}
    />
    <div
      className="subtext"
    >
      some test text
    </div>
  </React.Fragment>
</withRouter(OutboundLink)>
`;
